eks-istio-2204/kustomize-gitactions/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-sample-service
  labels:
    app: app-sample
spec:
  selector:
    app: app-sample
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: NodePort
